--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Feliz Aniversário minha linda!!❤️ ❤️ </title>
+	<title>Feliz 4 Meses!! </title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap"
 		rel="stylesheet">
@@ -18,33 +17,41 @@
 	<div class="hero">
 		<main>
 			<div class="apresentacao">
-				<h1 class="off">Feliz Aniversário Ana!!❤️ </h1>
-				<p class='off'>
-           AAAHH, primeiramente feliz aniversário sua linda, eu fiz uma carta só que eu não sei se ia conseguir entregar.
-					 Sério eu gosto muito de estar com você, mesmo eu não conseguindo puxar muito assunto ou te dar muito afeto(desculpa),
-					 seu jeito é tão único e espontâneo que eu fico todo besta do seu lado, mesmo você se achando 'nhe' eu te acho "BOOOMM!!!!!".
-					 Logo na primeira vez que eu te vi eu fiquei muito boiola, eu juro eu pensei: "como assim essa menina mora no praia".
-					 Quando a gente começou a ficar eu adorava te marcar nos videos do ttk porque vc sempre respondia e eu ficava todo boboKKKKK, vc é muito especial serio, eu quero muito muito mesmo
-					 continuar tendo contato com você, mesmo que a gente tenha se distanciado por culpa minha(desculpa dnv) eu ainda gosto muito de você, me desculpa se eu fui babaca alguma hora com vc, 
-					 eu espero de coração que vc seja muito feliz e mais uma vez desculpa se não te dei a atenção que vc merecia. Parabéns linda, maravilhosa, perfeita. 
+				<h1 class="off">Minha Lua🌙</h1>
+				<p class='off'> tchucaaaaaa, 4 meses mano!!!! 4 meses
+					eu juro eu não sei como agradecer por você ter me aguentado até aqui!!!
+					eu não fiz nada nos últimos meses nem comemorei nem nada me desculpe por isso inclusive, mas hoje em dia eu
+					fico feliz pra crlh de ter você a cada dia que passa você me faz um bem danado mulher eu juro você me salva
+					com palavras!
+					sem você eu não estaria aqui obrigado por sempre estar presente sempre dar o seu melhor e sempre existir!!
+					eu não tenho palavras pra descrever sério
+					EU TE AMO DEMAIS!!!! E DEMAIS MESMO!!!!!
+					quero passar o resto da minha vida contigo
+					quero ser seu tudo sua lua!!!! e em breve vamos ter nossa lua
+					garota você é incrível pra crlh eu quero gritar pro mundo todooo
+					se tivesse aqui eu te levaria pra sair 00:00 e te faria feliz pra crlh em uma madrugada!
+					me deixa cuidar de ti
+					foram 4 meses não é nem o começo de uma vida toda!!!
+					feliz 4 meses meu amor!!!!
+					tô te esperando.
 				</p>
-        <span class='off'>❤️I want to be with you❤️</span>
-				
+				<span class='off'>❤️I want to be with you❤️</span>
+
 				<button id="btn">Clique Aqui</button>
-				
+
 				<div class="card">
 					<div class="card-content">
 						<div class="off row valign-wrapper">
 							<a href="#" class="btn">
 								<i class="material-icons" id="play-pause">play_arrow</i>
 							</a>
-						</div>	
+						</div>
 					</div>
 				</div>
 			</div>
 		</main>
 	</div>
-    <script src="./script/main.js" type="module"></script>
+	<script src="./script/main.js" type="module"></script>
 </body>
 
 </html>
