--- a/index.html
+++ b/index.html
@@ -17,25 +17,13 @@
 	<div class="hero">
 		<main>
 			<div class="apresentacao">
-				<h1 class="off">Minha Lua🌙</h1>
-				<p class='off'> tchucaaaaaa, 4 meses mano!!!! 4 meses
-					eu juro eu não sei como agradecer por você ter me aguentado até aqui!!!
-					eu não fiz nada nos últimos meses nem comemorei nem nada me desculpe por isso inclusive, mas hoje em dia eu
-					fico feliz pra crlh de ter você a cada dia que passa você me faz um bem danado mulher eu juro você me salva
-					com palavras!
-					sem você eu não estaria aqui obrigado por sempre estar presente sempre dar o seu melhor e sempre existir!!
-					eu não tenho palavras pra descrever sério
-					EU TE AMO DEMAIS!!!! E DEMAIS MESMO!!!!!
-					quero passar o resto da minha vida contigo
-					quero ser seu tudo sua lua!!!! e em breve vamos ter nossa lua
-					garota você é incrível pra crlh eu quero gritar pro mundo todooo
-					se tivesse aqui eu te levaria pra sair 00:00 e te faria feliz pra crlh em uma madrugada!
-					me deixa cuidar de ti
-					foram 4 meses não é nem o começo de uma vida toda!!!
-					feliz 4 meses meu amor!!!!
-					tô te esperando.
+				<h1 class="off">RAYSSA VSFD</h1>
+				<p class='off'>
+					Rapaz não sei o motivo, não sei o porque e você também não facilita minha vida nem um pouco.
+					Eu não ligo de descontar sua raiva em mim, mas depois pelo menos me fala o motivo, eu me preocupo com vc, idiota.
+					Quando estivar mais calma, vamos conversar eu quero te ouvir.
 				</p>
-				<span class='off'>❤️I want to be with you❤️</span>
+				<span class='off'>❤️You're my favorite part off life❤️</span>
 
 				<button id="btn">Clique Aqui</button>
 
