--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>minina braba </title>
+	<title>pra ti, só pra ti</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap"
 		rel="stylesheet">
@@ -17,13 +17,17 @@
 	<div class="hero">
 		<main>
 			<div class="apresentacao">
-				<h1 class="off">RAYSSA VSFD</h1>
+				<h1 class="off">oi xanda, amor, doce de leite com chocolate.</h1>
 				<p class='off'>
-					Rapaz não sei o motivo, não sei o porque e você também não facilita minha vida nem um pouco.
-					Eu não ligo de descontar sua raiva em mim, mas depois pelo menos me fala o motivo, eu me preocupo com vc, idiota.
-					Quando estivar mais calma, vamos conversar eu quero te ouvir.
+					Foi muito inesperado, eu não esperava nem um pouco que ia me envolver tanto com você, eu só gosto muito de você, 
+					sempre quando você me manda mensagem eu fico muito feliz, me sinto nas nuvens. Eu gosto de como estamos indo mas
+					as vezes tenho medo de não conseguir falar muito, ou conversar. Me sinto muito feliz com você muito mesmo e te quero muito
+					você é muito especial pra mim, você é toda inteligente, simpatica, engraçada, legal, bonita e perfeita. Você é tudo de bom pra mim
+					eu quero que estaja sempre presente na minha vida, você é tipo um sonho que não acaba de tão bom, não sei se fez sentido ou não. Mas é isso.
+					Eu só queria fazer algo especial.
 				</p>
-				<span class='off'>❤️You're my favorite part off life❤️</span>
+				<span class='off'>❤️It's night like this when I need your love
+					When I need someone that'll read my soul❤️</span>
 
 				<button id="btn">Clique Aqui</button>
 
