--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 					eu quero que estaja sempre presente na minha vida, você é tipo um sonho que não acaba de tão bom, não sei se fez sentido ou não. Mas é isso.
 					Eu só queria fazer algo especial.
 				</p>
-				<span class='off'>❤️It's night like this when I need your love
-					When I need someone that'll read my soul❤️</span>
+				<span class='off'>❤️É isso, espero que tenha gostado. eu realmente gosto de você. Beijos MWAAAA❤️</span>
 
 				<button id="btn">Clique Aqui</button>
 
