--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 			<div class="apresentacao">
 				<h1 class="off">oi xanda, amor, doce de leite com chocolate.</h1>
 				<p class='off'>
-					Assim como começou inesperadamente, acabou da mesma forma. Você foi a pessoa mais incrivel que eu conheci
-					não consigo aceitar muito bem como isso aconteceu, eu entendo seu ponto racionamente mas meus sentimentos não entendem. 
-					tudo bem, teve que acontecer. Se foi melhor para você tudo bem, eu sempre vou querer seu bem, se é se distanciando de mim,
-					se é me esquecendo, tudo bem! eu aceito. Afinal quem falou oque não devia fui eu. Nunca fui acertivo. Você foi minha maior paixão. 
-					Se ver isso e quiser tentar de novo. Me manda mensagem. Eu estou aqui para você e com você. Me mata não ter conseguido conversar pessoalmente, mas ok.
+					Foi muito inesperado, eu não esperava nem um pouco que ia me envolver tanto com você, eu só gosto muito de você, 
+					sempre quando você me manda mensagem eu fico muito feliz, me sinto nas nuvens. Eu gosto de como estamos indo mas
+					as vezes tenho medo de não conseguir falar muito, ou conversar. Me sinto muito feliz com você muito mesmo e te quero muito
+					você é muito especial pra mim, você é toda inteligente, simpatica, engraçada, legal, bonita e perfeita. Você é tudo de bom pra mim
+					eu quero que estaja sempre presente na minha vida, você é tipo um sonho que não acaba de tão bom, não sei se fez sentido ou não. Mas é isso.
+					Eu só queria fazer algo especial.
 				</p>
-				<span class='off'>❤️Se pah em outra vida, quem sabe né. Ou quando estiver aberta para mim novamente❤️</span>
+				<span class='off'>❤️É isso, espero que tenha gostado. eu realmente gosto de você. Beijos MWAAAA❤️</span>
 
 				<button id="btn">Clique Aqui</button>
 
