--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 				<span class='off'>❤️É isso, espero que tenha gostado. eu realmente gosto de você. Beijos MWAAAA❤️</span>
 
 				<button id="btn">Clique Aqui</button>
-
 				<div class="card">
 					<div class="card-content">
 						<div class="off row valign-wrapper">
@@ -41,6 +40,8 @@
 				</div>
 			</div>
 		</main>
+		<a href="aniversario.html" class="aniversario">Proxima Página</a>
+		
 	</div>
 	<script src="./script/main.js" type="module"></script>
 </body>
